--- a/FoodCraft/app/build.gradle
+++ b/FoodCraft/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "sfsu.csc413.foodcraft"
-        minSdkVersion 19
+        minSdkVersion 20
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -22,5 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
-    compile project(':volley')
+    //This is a mirrored Volley Library that allows us to use Volley without having to GitClone and import it every time
+    //  I like it because it cleans up our file structure. - PK
+    compile 'com.mcxiaoke.volley:library:1.0.19'
 }
