--- a/FoodCraft/app/build.gradle
+++ b/FoodCraft/app/build.gradle
@@ -21,8 +21,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.1'
     //This is a mirrored Volley Library that allows us to use Volley without having to GitClone and import it every time
     //  I like it because it cleans up our file structure. - PK
+    compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile 'com.android.support:design:23.0.1'
 }
