--- a/FoodCraft/app/src/main/AndroidManifest.xml
+++ b/FoodCraft/app/src/main/AndroidManifest.xml
@@ -4,11 +4,17 @@
 
     <!-- Internet Permission added due to our API calls, and Volley requests. - PK -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <activity
+            android:name=".SplashScreenActivity"
+            android:label="@string/app_name">
+        </activity>
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
