--- a/FoodCraft/app/src/main/AndroidManifest.xml
+++ b/FoodCraft/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
             android:name=".IngredientSearch"
             android:label="@string/title_activity_ingredient_search"
             android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
