ResultsList partially working, functionality there but not visuals. Yummly API request broken.

--- a/FoodCraft/app/src/main/AndroidManifest.xml
+++ b/FoodCraft/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
             android:name=".SharedPreferences"
             android:label="@string/title_activity_shared_preferences" >
         </activity>
+        <activity
+            android:name=".ResultsListActivity" >
+        </activity>
     </application>
 
 </manifest>
