linked results to details

--- a/FoodCraft/app/src/main/AndroidManifest.xml
+++ b/FoodCraft/app/src/main/AndroidManifest.xml
@@ -42,6 +42,9 @@
         <activity
             android:name=".ResultsListActivity" >
         </activity>
+        <activity
+            android:name=".RecipeDetailActivity" >
+        </activity>
     </application>
 
 </manifest>
