--- a/FoodCraft/app/src/main/AndroidManifest.xml
+++ b/FoodCraft/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="sfsu.csc413.foodcraft" >
+    package="sfsu.csc413.foodcraft">
 
     <!-- Internet Permission added due to our API calls, and Volley requests. - PK -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,10 +10,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".SplashScreenActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,27 +24,20 @@
             android:name=".UPCScan"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
-            android:windowSoftInputMode="stateAlwaysHidden" >
-        </activity>
+            android:windowSoftInputMode="stateAlwaysHidden"></activity>
         <activity
             android:name=".IngredientSearch"
             android:label="@string/title_activity_ingredient_search"
-            android:theme="@style/AppTheme.NoActionBar" >
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
-        </activity>
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".SharedPreferences"
-            android:label="@string/title_activity_shared_preferences" >
-        </activity>
-        <activity
-            android:name=".ResultsListActivity" >
-        </activity>
-        <activity
-            android:name=".RecipeDetailActivity" >
-        </activity>
+            android:label="@string/title_activity_shared_preferences"></activity>
+        <activity android:name=".ResultsListActivity"></activity>
+        <activity android:name=".RecipeDetailActivity"></activity>
+        <activity android:name=".GlossaryActivity"></activity>
     </application>
 
 </manifest>
