--- a/FoodCraft/app/src/main/AndroidManifest.xml
+++ b/FoodCraft/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".SplashScreenActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
