--- a/FoodCraft/app/src/main/AndroidManifest.xml
+++ b/FoodCraft/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
             android:label="@string/title_activity_shared_preferences" >
         </activity>
         <activity
-            android:name=".ResultsListActivity" >
+            android:name=".CardviewActivity" >
         </activity>
         <activity
             android:name=".RecipeDetailActivity" >
