--- a/FoodCraft/app/src/main/AndroidManifest.xml
+++ b/FoodCraft/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:screenOrientation="portrait"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -22,29 +23,23 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".UPCScan"
-            android:screenOrientation="portrait"
-            android:stateNotNeeded="true"
-            android:windowSoftInputMode="stateAlwaysHidden" >
-        </activity>
-        <activity
             android:name=".IngredientSearch"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_ingredient_search"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
             android:name=".SharedPreferences"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_shared_preferences" >
         </activity>
         <activity
-            android:name=".CardviewActivity" >
+            android:name=".CardviewActivity"
+            android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name=".RecipeDetailActivity" >
+            android:name=".RecipeDetailActivity"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
