--- a/FoodCraft/app/build.gradle
+++ b/FoodCraft/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.+'
     compile 'com.android.support:palette-v7:23.0.0'
     compile 'com.squareup.picasso:picasso:2.5.0'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
