--- a/FoodCraft/app/build.gradle
+++ b/FoodCraft/app/build.gradle
@@ -21,6 +21,7 @@ android {
 }
 repositories {
     jcenter()
+    mavenCentral()
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -36,4 +37,8 @@ dependencies {
     compile 'com.android.support:palette-v7:23.0.0'
     compile 'com.squareup.picasso:picasso:2.5.0'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.google.android.gms:play-services:8.3.0'
+    compile 'org.scribe:scribe:1.3.7'
+    compile 'com.beust:jcommander:1.48'
+    compile('com.googlecode.json-simple:json-simple:1.1.1'){ exclude group: 'org.hamcrest', module: 'hamcrest-core' }
 }
